# hide_from_traceback

./: .gitignore  README.md  lib.c  pyproject.toml
.github/workflows/: ci.yml
hide_from_traceback/: __init__.py
